# nexrad-l3-pipeline

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
db/: README.md  wrangler.jsonc
db/migrations/: 0001_init.sql  0002_ops_monitor_state.sql  0003_wind_grids.sql  0004_lightning_buckets.sql  0005_wind_levels.sql
docs/: arquitectura.md  decisiones.md  index.md  operacion.md  plan-implementacion.md  productos.md  validaciones.md
ingest/: __init__.py  cli.py  config.py  lightning.py  logging_setup.py  monitor.py  poller.py  products.py  replay.py  watcher.py  wind.py
ingest/decoder/: __init__.py  level3.py
ingest/gridding/: __init__.py  aeqd.py  cog.py
ingest/phenomena/: __init__.py  parse.py  vwp.py
ingest/retention/: __init__.py  sweep.py
ingest/storage/: __init__.py  d1.py  keys.py  publish.py  r2.py
scripts/: e2e_local.py  validate_wind_worker.py
tests/: conftest.py  test_cog.py  test_config.py  test_d1.py  test_decoder.py  test_gridding.py  test_health.py  test_lightning.py  test_logging_setup.py  test_monitor.py  test_phenomena.py  test_poller.py  test_publish.py  test_replay.py  test_retention.py  test_smoke.py  test_storage_integration.py  test_vwp.py  test_watcher.py  test_wind.py
tests/data/: AMX_DAA_2026_07_10_04_57_17  AMX_DTA_2026_07_10_04_57_17  AMX_DU3_2026_07_10_04_09_39  AMX_DVL_2026_07_10_04_57_17  AMX_EET_2026_07_10_04_57_17  AMX_N0B_2026_07_06_15_45_17  AMX_N0G_2026_07_10_05_03_18  AMX_NMD_2026_07_10_04_57_17  AMX_NST_2026_07_10_04_57_17  AMX_NVW_2026_07_10_04_57_17  GLM_LCFA_2026_07_20_13_00_00.nc  ICT_NMD_2026_07_10_05_07_19  ICT_NST_2026_07_10_05_07_19  JUA_N0B_2026_07_06_15_43_47  JUA_NMD_2026_07_09_20_26_30  JUA_NST_2026_07_09_20_26_30  TLX_NMD_2026_07_10_05_08_45  TLX_NST_2026_07_10_05_08_45
workers/lightning/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
workers/ops/: README.md  package-lock.json  package.json  wrangler.jsonc
workers/wind/: README.md  package-lock.json  package.json  (+2 more)
(+14 files in other folders)
