[project]
name = "nexrad-l3-pipeline"
version = "0.1.0"
description = "Ingesta NEXRAD Level III (IDD/NNEXRAD) → COG calibrados en R2 + metadatos/fenómenos en D1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
l3proc = "ingest.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingest"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "C4",  # comprehensions
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
