[project]
name = "nexrad-l3-pipeline"
version = "0.1.0"
description = "Ingesta NEXRAD Level III (IDD/NNEXRAD) → COG calibrados en R2 + metadatos/fenómenos en D1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.40",
    "eccodes>=2.47.0",
    "eccodeslib>=2.48.0.26",
    "httpx>=0.28.1",
    "metpy>=1.7.1",
    "numpy>=2.5.1",
    "pyproj>=3.7.2",
    "rasterio>=1.5.0",
    "watchdog>=6.0.0",
]

[project.scripts]
l3proc = "ingest.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingest"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "C4",  # comprehensions
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: tests contra servicios reales (MinIO/R2, D1); se saltan sin credenciales en el entorno",
]
